# itf-py

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: PUBLISHING.md
.github/workflows/: ci.yml  format.yml  publish.yml  release.yml
examples/: README.md  tftp-trace.itf.json
itf-py/: .flake8  README.md  pyproject.toml
itf-py/src/itf_py/: __init__.py  itf.py
itf-py/tests/: test_itf_of_state.py  test_itf_of_value.py  test_state_from_json.py  test_state_of_itf.py  test_state_to_json.py  test_trace_from_json.py  test_trace_to_json.py  test_value_from_json.py  test_value_of_itf.py  test_value_to_json.py
