[tool.poetry]
name = "itf-py"
version = "0.1.0"
description = "Python library to parse and emit Apalache ITF traces"
homepage = "https://github.com/konnov/itf-py"
authors = ["Igor Konnov <igor@konnov.phd>"]
readme = "README.md"
packages = [{include = "itf_py", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
